syntax = "proto3";

package serialization;

option java_multiple_files = true;
option java_package = "com.jacle.serialization";
option java_outer_classname = "AllStreamProto";

message AllStreamRequest {
    //rpc的方法的参数
    string name = 1;
}

message AllStreamReply {
    //rpc返回的数据
    string message = 1;
}

//rpc处理类
service GreeterAllStream
{
    //参数是stream形式
    //多个请求对象，一个响应对象
    rpc sayAllHello(stream AllStreamRequest) returns ( stream AllStreamReply) {}
}
